--- a/app/assets/javascripts/forem.js.erb
+++ b/app/assets/javascripts/forem.js.erb
@@ -5,7 +5,7 @@ var Forem = {};
   # Rails 3.2 returns a Journey::Path::Pattern object, Rails 3.1 an actual path.
   path = path.spec.to_s if path.respond_to?(:spec)
   # Strips leading slashes from base_path
-  path = path.sub(/\A\/*/, '')
+  path = path.sub(/\A\/*/, '') unless path.nil?
 %>
 
 Forem.base_path = <%= path.inspect %>;
